projects/packet-plus-backend/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: packet-plus-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: infra
      sectionName: packet-plus-wildcard-https
  hostnames:
    - api.packet.plus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: packet-plus-backend
          port: 80
          weight: 1
